Add new files and modifications

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,34 @@ a:hover {
 .cursor-pointer {
   cursor: pointer;
 }
+
+
+/* theme */
+/* الثيم الفاتح */
+.light-theme {
+  background-color: #ffffff;  /* خلفية بيضاء */
+  color: #000000;  /* النصوص باللون الأسود */
+}
+
+/* الخطوط والآيقونات في الثيم الفاتح */
+.light-theme .icon {
+  color: #FFD700;  /* الأصفر المستخدم في الأيقونات */
+}
+
+/* الثيم الداكن */
+.dark-theme {
+  background-color: #333333;  /* خلفية داكنة */
+  color: #ffffff;  /* النصوص باللون الأبيض */
+}
+
+/* الخطوط والآيقونات في الثيم الداكن */
+.dark-theme .icon {
+  color: #FFD700;  /* نفس اللون الأصفر للأيقونات */
+}
+
+/* CSS لتحسين الأيقونات */
+.icon {
+  margin-right: 8px; /* إضافة مسافة بين الأيقونة والنص */
+  font-size: 18px;  /* تغيير حجم الأيقونة */
+  color: #FFD700;   /* اللون الأصفر للأيقونة */
+}
