--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 @import '../../index.css';
 
 .navbarCustom {
-  background-color: #f8f9fa;
+  /* background-color: #f8f9fa; */
   border-bottom: 1px solid #E4D804; 
 }
 
