--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,7 @@ body {
   font-family: "Montserrat Alternates", sans-serif;
 }
 
-a,
-a:hover {
-  color: #fff !important;
-}
+
 .image-container img {
   width: 100%;
   height: auto;
@@ -20,33 +17,27 @@ a:hover {
   cursor: pointer;
 }
 
-
-/* theme */
-/* الثيم الفاتح */
 .light-theme {
-  background-color: #ffffff;  /* خلفية بيضاء */
-  color: #000000;  /* النصوص باللون الأسود */
+  background-color: #ffffff; 
+  color: #000000;  
 }
 
-/* الخطوط والآيقونات في الثيم الفاتح */
 .light-theme .icon {
-  color: #FFD700;  /* الأصفر المستخدم في الأيقونات */
+  color: #FFD700;  
 }
 
-/* الثيم الداكن */
+
 .dark-theme {
-  background-color: #333333;  /* خلفية داكنة */
-  color: #ffffff;  /* النصوص باللون الأبيض */
+  background-color: #333333;  
+  color: #ffffff;  
 }
 
-/* الخطوط والآيقونات في الثيم الداكن */
 .dark-theme .icon {
-  color: #FFD700;  /* نفس اللون الأصفر للأيقونات */
+  color: #FFD700;  
 }
 
-/* CSS لتحسين الأيقونات */
 .icon {
-  margin-right: 8px; /* إضافة مسافة بين الأيقونة والنص */
-  font-size: 18px;  /* تغيير حجم الأيقونة */
-  color: #FFD700;   /* اللون الأصفر للأيقونة */
+  margin-right: 8px;
+  font-size: 18px;  
+  color: #FFD700;   
 }
